# qt-py-s3-daq-app

./: README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  help-request.md  wiki-request.md
.github/workflows/: automerge-dependabot-prs.yml  ci.yml
doc/legacy/: README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  asyncio_crash_course.md  mosquito-sys-topics.json  mqtt_crash_course.md
docs/adc/: characterization_setup.md  qtpy_adc_characterization.ipynb
docs/adc/data/: u1_longform_01.6484V_ref.csv  u1_longform_0150.34mV_ref.csv  u1_longform_02.9997V_ref.csv  u2_longform_01.6484V_ref.csv  u2_longform_0150.34mV_ref.csv  u2_longform_02.9997V_ref.csv
docs/legacy/: InfiniteSerialReadP_V4.py  PCBv5Centrifuge_CRB.ino  PCBv5Reader_CRB.ino  README.md
docs/xl3d/: xl3d_characterization.ipynb  xl3d_repeats_samples.ipynb
docs/xl3d/data/: raw_xl3d_timestamp.csv  raw_xl3d_timestamp_slept.csv  u1_xl3d.csv  u2_xl3d.csv
src/qtpy_datalogger/: __init__.py  __main__.py  builtin_circuitpython_modules.toml  console.py  datatypes.py  discovery.py  equip.py  guikit.py  network.py  server.py  tracelog.py  ttkbootstrap_matplotlib.py
src/qtpy_datalogger/apps/: __init__.py  data_viewer.py  empty.py  matplotlib_demo.py  scanner.py  soil_swell.py
src/qtpy_datalogger/assets/: soil_swell_demo.csv
src/qtpy_datalogger/sensor_node/: code.py  qtpy_sensor_node.md
src/qtpy_datalogger/sensor_node/snsr/: __init__.py  core.py  handlers.py  notice.toml  rxtx.py  settings.py
src/qtpy_datalogger/sensor_node/snsr/apps/: __init__.py  echo.py  qtpycmd.py  soil_swell.py
src/qtpy_datalogger/sensor_node/snsr/node/: __init__.py  classes.py  mqtt.py
src/qtpy_datalogger/sensor_node/snsr/pysh/: diagnostics.py  py_shell.py
src/qtpy_sensor_node/snsr/pysh/: __init__.py  diagnostics.py  linebuffer.py  py_shell.py
tests/: __init__.py  test_console.py  test_discovery.py  test_equip.py  test_main.py  test_node_classes.py  test_node_mqtt.py  test_pysh_linebuffer.py  test_pysh_py_shell.py
