[tool.poetry]
name = "qtpy-datalogger"
version = "0.1.0"
description = "Data acquisition application using Adafruit QT Py S3"
authors = [
    "Down to the Wire <8404598+wireddown@users.noreply.github.com>",
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
qtpy-datalogger = "qtpy_datalogger.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
pyright = "^1.1.387"

[tool.poe.tasks]
_ruff_check = "ruff check"
_ruff_diff = "ruff format --diff"
_pyright = "pyright --dependencies"
_ruff_check_fix = "ruff check --fix"
_ruff_format = "ruff format"
lint.help = "Run the analyzers for the package."
lint.sequence = ["_ruff_check", "_ruff_diff", "_pyright"]
lint.ignore_fail = "return_zero"
fix.help = "Run the code formatter on the package."
fix.sequence = ["_ruff_check_fix", "_ruff_format"]
fix.ignore_fail = "return_zero"
test.help = "Run the tests for the package."
test.cmd = "pytest"

[tool.pytest.ini_options]
addopts = "--showlocals"

[tool.pyright]
venvPath = ".venv"
verboseOutput = true
exclude = [
    ".venv",
    "docs/legacy",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "docs/legacy",
]

[tool.ruff.lint]
extend-select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "DTZ",
    "EM",
    "ERA",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PIE",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T10",
    "UP",
    "W",
]
ignore = [
    "D203",
    "D211",
    "D212",
    "D400",
    "COM812",
    "G004",
    "ISC001",
    "RET504",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "INP001",
    "S101",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
